[JVMCI] GetNextStackFrameTest SIGSEGV @ ScopeDesc::objects()+0x1

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • Verified

      running hotspot/test/compiler/jvmci/compilerToVM/GetNextStackFrame.java w/ Xcomp causes SEGV @ ScopeDesc::objects()+0x1, while the same test in Xmixed passes


      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f98e948ff11, pid=3648, tid=3991
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-iignatye_2015_09_17_11_50-b00)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-iignatye_2015_09_17_11_50-b00, compiled mode, tiered, jvmci, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1017f11] ScopeDesc::objects()+0x1
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %P" (or dumping to /tmp/run/JTwork/scratch/core.3648)
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

            Assignee:
            Gilles Duboscq
            Reporter:
            Igor Ignatyev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: